crates/keron-lang/tests/corpus/errors/check/concat_resource_with_int.keron

val syms: List<Symlink> = [symlink(source = "b", target = "a")]
val ns: List<Int> = [1, 2]
val all = syms ++ ns
